<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wordpress.getaufansepta.newsdev.activity.MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/categories">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:background="#4695f5">

            <TextView
                android:id="@+id/cat1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/titleCategorie_1"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/cat2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/titleCategorie_2"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/cat3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/titleCategorie_3"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="16sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:background="#559df5">

            <TextView
                android:id="@+id/cat4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/titleCategorie_4"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/cat5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/titleCategorie_5"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/cat6"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/titleCategorie_6"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="16sp"/>
        </TableRow>

    </TableLayout>
    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/categories"
        android:id="@+id/pullRefresh">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarStyle="insideOverlay">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/contentFragment">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtHeaderheadline"
                    android:text="@string/titlebar_headline"
                    android:background="#a3c4ec"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="#ffffff"/>
                <android.support.v7.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/headlinelist"/>
                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ads:adUnitId="@string/banner_ad_unitID"
                    ads:adSize="BANNER"
                    android:background="#ffffff"
                    android:layout_marginBottom="5dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titlebar_newsline"
                    android:id="@+id/txtNewsline"
                    android:background="#a3c4ec"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="#ffffff"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/newslist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <!--<com.google.android.gms.ads.AdView
                    android:id="@+id/adView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#ffffff"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit_id"
                    android:layout_centerHorizontal="true"/>-->
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>


</RelativeLayout>
